--- a/app/views/dashboard.html
+++ b/app/views/dashboard.html
@@ -1,1 +1,17 @@
 <h1>Dashboard</h1>
+
+<md-list>
+	<md-list-item class="md-2-line" ng-repeat="rule in vm.rules track by rule.id" ng-click="vm.editRule(rule)">
+		<img ng-src="http://placehold.it/40x40" class="md-avatar" alt="{{rule.name}}" />
+		<div class="md-list-item-text">
+			<h3 ng-bind="rule.name"></h3>
+			<p layout="row">
+				<span>Last updated: <span ng-bind="rule.last_updated | date: 'd MMM'"></span></span>
+				<span flex></span>
+				<span ng-if="rule.last_published">Last published: <span ng-bind="rule.last_published | date: 'd MMM'"></span></span>
+				<span ng-if="!rule.last_published">Unpublished</span>
+			</p>
+		</div>
+		<md-divider ng-if="!$last"></md-divider>
+	</md-list-item>
+</md-list>
