shelving schedule for now

--- a/app/views/rule.html
+++ b/app/views/rule.html
@@ -20,11 +20,11 @@
 			<span ng-bind="::vm.trigger.label"></span>
 		</md-button>
 		
-		<md-subheader>Scheduling</md-subheader>
+		<!-- <md-subheader>Scheduling</md-subheader>
 		<md-button type="button" class="column-button" ng-click="vm.editRuleAttribute($event, vm.schedule)" aria-label="{{ ::vm.schedule.label }}">
 			<md-icon md-svg-src="assets/images/icons/edit.svg"></md-icon>
 			<span ng-bind="::vm.schedule.label"></span>
-		</md-button>
+		</md-button> -->
 		
 		<hr />
 
