--- a/app/views/partials/rule-modal.html
+++ b/app/views/partials/rule-modal.html
@@ -3,7 +3,7 @@
 		<md-dialog-content>
 			<h2 class="md-title" ng-bind="::vm.title"></h2>
 
-			<rule-schedule rule="vm.rule"></rule-schedule>
+			<!-- <rule-schedule rule="vm.rule"></rule-schedule> -->
 
 		</md-dialog-content>
 
