basic functionality for ranking actions (slider to come)

--- a/app/views/partials/rule-modal.html
+++ b/app/views/partials/rule-modal.html
@@ -6,6 +6,7 @@
 			<div ng-switch="vm.action.component">
 				<div ng-switch-when="remove-from-listing" rule-remove-from-listing actions="vm.rule.actions"></div>
 				<div ng-switch-when="tier-listing" rule-tier-listing actions="vm.rule.actions"></div>
+				<div ng-switch-when="ranking" rule-ranking actions="vm.rule.actions"></div>
 			</div>
 
 		</md-dialog-content>
