--- a/app/views/partials/menu.html
+++ b/app/views/partials/menu.html
@@ -1,12 +1,7 @@
 <md-content>
 	<nav layout="column">
-		<md-button ng-href="/personalisations/">Personalisations</md-button>
-		<md-button ng-href="#">Search listings</md-button>
-		<md-button ng-href="#">Search ranking</md-button>
-		<md-button ng-href="#">Canned search results</md-button>
-		<md-button ng-href="#">Redirect</md-button>
-		<md-button ng-href="#">Content</md-button>
-		<md-button ng-href="#">Related product listing</md-button>
+		<md-button ng-href="/personalisation/">Personalisations</md-button>
+		<md-button ng-repeat="type in vm.ruleTypes" ng-href="/personalisation/?type={{ type.name }}" ng-bind="type.display_name" aria-label="{{ type.display_name }}"></md-button>
 		<md-button ng-href="#">Canned related products</md-button>
 		<hr style />
 		<md-button ng-href="#">Configuration</md-button>
